<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_marginBottom="@dimen/layout_5"
    android:id="@+id/item_cardview"
    app:cardCornerRadius="@dimen/layout_10"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/layout_8"
    android:layout_margin="@dimen/layout_8">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="@dimen/layout_65"
        android:layout_height="@dimen/layout_65"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/profile_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/item_image"
        app:layout_constraintTop_toTopOf="@id/item_image"
        app:layout_constraintBottom_toBottomOf="@id/item_image"
        android:layout_marginStart="@dimen/layout_20">

        <TextView
            android:id="@+id/item_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="@dimen/text_18"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/item_image"
            app:layout_constraintTop_toTopOf="@+id/item_image"
            app:layout_constraintStart_toEndOf="@id/item_image"
            android:layout_marginBottom="@dimen/layout_2"
            />

        <TextView
            android:id="@+id/item_userid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            app:layout_constraintStart_toStartOf="@id/item_username"
            app:layout_constraintTop_toBottomOf="@id/item_username"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>