<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_7"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_60"
        android:background="@android:color/white"
        tools:layout_height="?android:attr/actionBarSize"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/editSearch"
            android:layout_width="@dimen/layout_0"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="textNoSuggestions"
            android:lines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16"
            android:layout_marginStart="@dimen/layout_5"
            app:layout_constraintEnd_toStartOf="@id/search_btn"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="" />

        <ImageButton
            android:id="@+id/search_btn"
            style="@style/SearchViewIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/action_voice_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/search_24" />

        <View
            android:id="@+id/bottomLine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_1"
            android:background="#0D000000"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/searchResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_users_found"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/searchContainer"
        app:layout_constraintBottom_toTopOf="@id/lowerLayer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/layout_12"
        android:layout_marginTop="@dimen/layout_12"/>

    <RelativeLayout
        app:layout_constraintTop_toBottomOf="@id/searchResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/lowerLayer">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- activity_main.xml -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/usersList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/user_item" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:layout_centerInParent="true"
            android:id="@+id/progressView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"/>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>